Fix cursor for dark mode button

--- a/themes/starter-garden/assets/css/03-components/themetoggle.css
+++ b/themes/starter-garden/assets/css/03-components/themetoggle.css
@@ -4,12 +4,13 @@
   padding: var(--space-xs) var(--space-s);
   background-color: rgba(255, 255, 255, 0.4);
   transition: all 0.3s ease;
-  border: 1px solid rgba(255, 255, 255, 0.4); 
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  cursor: pointer;
 }
 
 [data-theme="dark"] .themetoggle {
   background-color: rgba(39, 39, 42, 0.9);
-  border: 1px solid rgba(255, 255, 255, 0.1); 
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .icon--lightmode {
@@ -23,6 +24,7 @@
 [data-theme="dark"] .icon--lightmode {
   display: none;
 }
+
 [data-theme="dark"] .icon--darkmode {
   display: inline-block;
 }
